Fixed floating footer on mobile view

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,13 @@
+html {
+	height: 100%;
+}
+
 body {
 	background-color: #111111;
 	color: white;
 	font-family: 'Questrial', sans-serif;
-	height: 100%;
+	min-height: 100%;
+	position: relative;
 }
 
 #navBar {
@@ -131,7 +136,9 @@ ol {
 .footer {
 	height: 85px;
 	background-color: black;
-	width: 100%;	
+	width: 100%;
+	bottom: 0;
+	position: absolute;
 }
 
 #reactIcon {
